Implements mongo part 2
